# Workbench

./: README.md
AvaloniaApplication/: AvaloniaApplication.sln
AvaloniaApplication/AvaloniaApplication.Browser/: AvaloniaApplication.Browser.csproj  Program.cs
AvaloniaApplication/AvaloniaApplication.Desktop/: AvaloniaApplication.Desktop.csproj
AvaloniaApplication1/: AvaloniaApplication1.csproj
AvaloniaApplication1.Desktop/: AvaloniaApplication1.Desktop.csproj
BatchScripts/: called.bat  console.bat  console.txt
CMakeProject1/: README.md
CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  bezier.cpp  dbezier.cpp  dbezier.h  tbezier.cpp  tdbez.cpp
CMakeProject1/CMakeProject1/Cpp/: knot.cpp  tbasis.cpp  tbezier.cpp
CMakeProject1/CMakeProject1/Cpp/Ch2BezierCurves/: tdbez.cpp
CMakeProject1/CMakeProject1/Cpp/Ch3BSplineCurves/: basis.cpp  bspline.cpp  bsplineu.cpp  dbasis.cpp  dbasisu.cpp  dbspline.cpp  dbsplineu.cpp  knotc.cpp  knotu.cpp  param.cpp  tbasis.cpp
CMakeProject1/CMakeProject1/HeaderFiles/: CMakeProject1.h  basis.h  bezier.h  bspline.h  bsplineu.h  dbasis.h  dbasisu.h  dbspline.h  dbsplineu.h  knot.h  knotc.h  knotu.h  param.h  tbasis.h  tbezier.h  tdbez.h
EntityExercise/: EntityExercise.sln
EntityExercise/EntityExercise/: EntityExercise.csproj  Program.cs
FileEncrypter/: FileEncrypter.sln
FileEncrypter/AvalonCrypter/: App.axaml  App.axaml.cs  AvalonCrypter.csproj  ContentWriter.cs  (+1 more)
FileEncrypter/AvalonCrypter.Desktop/: AvalonCrypter.Desktop.csproj  Program.cs
FileEncrypter/AvalonCrypter.Web/: App.axaml  App.axaml.cs
FileEncrypter/AvalonCrypter.Web.Browser/: Program.cs
FolderFilter/: FolderFilter.sln
ImageCropper/: index.html
Luxolis/: index.html  script.js  style.css
MarineParamCalculatorDataBindings/: MainWindow.xaml  MainWindow.xaml.cs  MarineParamCalculatorDataBindings.csproj  Model.cs
MarineParamCalculatorMustafa/: App.xaml  App.xaml.cs  Calculator.cs  Logger.cs  MainWindow.xaml  MainWindow.xaml.cs  MarineParamCalculatorMustafa.csproj  MarineParamCalculatorMustafa.sln  Model.cs
MetricUnits/: Cenimeter.cs  Milimeter.cs  meter.cs
PluginArchitectureExperiment/: ConsoleApp1.sln
RuleParser/: .gitignore  LogicParser.sln  README.md
WinSDK1/: WinSDK1.sln
(+124 files in other folders)
